<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.fidde.thepenguinstory.MainActivity$PlaceholderFragment" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/uiContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/pointContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp" >

                <TableRow
                    android:id="@+id/TableRow01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/daysAliveText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/days_alive"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/daysAliveNumberText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/_0"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/territoryPointsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/territory_points"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/territoryPointsNumberText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/_0"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />
                </TableRow>
            </TableLayout>

            <GridLayout
                android:id="@+id/statusbarContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/happinessIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="left"
                    android:layout_rowSpan="2"
                    android:contentDescription="@string/happiness_icon"
                    android:src="@drawable/happiness_icon" />

                <ProgressBar
                    android:id="@+id/happinessBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_row="1"
                    android:contentDescription="@string/happiness"
                    android:max="@integer/maxValue"
                    android:paddingRight="5dp"
                    android:progress="@integer/maxValue" />

                <ImageView
                    android:id="@+id/healthIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_column="0"
                    android:layout_gravity="left"
                    android:contentDescription="@string/health"
                    android:src="@drawable/ic_launcher" />

                <Space
                    android:layout_column="2"
                    android:layout_gravity="fill_vertical"
                    android:layout_row="3" />

                <ProgressBar
                    android:id="@+id/healthBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="fill_horizontal|center_vertical"
                    android:layout_row="2"
                    android:contentDescription="@string/happiness"
                    android:max="@integer/maxValue"
                    android:paddingRight="5dp"
                    android:progress="@integer/maxValue" />
            </GridLayout>

            <TableLayout
                android:id="@+id/menuContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <TableRow
                    android:id="@+id/buttonRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/feedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:background="@drawable/button_design"
                        android:height="@dimen/buttonHeight"
                        android:onClick="feed"
                        android:text="@string/feed"
                        android:textSize="@dimen/textSize"
                        android:width="@dimen/buttonWidth"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/danceButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:background="@drawable/button_design"
                        android:height="@dimen/buttonHeight"
                        android:onClick="dance"
                        android:text="@string/dance"
                        android:textSize="@dimen/textSize"
                        android:width="@dimen/buttonWidth"
                        tools:ignore="ButtonStyle" />
                </TableRow>

                <TableRow
                    android:id="@+id/buttonRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/healButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:background="@drawable/button_design"
                        android:height="@dimen/buttonHeight"
                        android:onClick="heal"
                        android:text="@string/heal"
                        android:textSize="@dimen/textSize"
                        android:width="@dimen/buttonWidth"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/cleanButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|top"
                        android:background="@drawable/button_design"
                        android:height="@dimen/buttonHeight"
                        android:onClick="clean"
                        android:text="@string/clean"
                        android:textSize="@dimen/textSize"
                        android:width="@dimen/buttonWidth"
                        tools:ignore="ButtonStyle" />
                </TableRow>

                <TableRow
                    android:id="@+id/buttonRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/markTerritoryButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:background="@drawable/button_design"
                        android:height="@dimen/buttonHeight"
                        android:onClick="markTerritory"
                        android:text="@string/mark_territory"
                        android:textSize="@dimen/textSize"
                        android:width="@dimen/buttonWidth"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/highscoreButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:background="@drawable/button_design"
                        android:height="@dimen/buttonHeight"
                        android:onClick="share"
                        android:text="@string/share"
                        android:textSize="@dimen/textSize"
                        android:width="@dimen/buttonWidth"
                        tools:ignore="ButtonStyle" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>